// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/divider/demo/horizontal.md correctly 1`] = `
<div>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
  <div
    class="infini-divider infini-divider-horizontal"
  />
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
  <div
    class="infini-divider infini-divider-horizontal infini-divider-with-text"
  >
    <span
      class="infini-divider-inner-text"
    >
      With Text
    </span>
  </div>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
  <div
    class="infini-divider infini-divider-horizontal infini-divider-dashed"
  />
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
</div>
`;

exports[`renders ./components/divider/demo/orientation.md correctly 1`] = `
<div>
  <div
    class="infini-divider infini-divider-horizontal infini-divider-with-text-left"
  >
    <span
      class="infini-divider-inner-text"
    >
      Left Text
    </span>
  </div>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
  <div
    class="infini-divider infini-divider-horizontal infini-divider-with-text-right"
  >
    <span
      class="infini-divider-inner-text"
    >
      Right Text
    </span>
  </div>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
</div>
`;

exports[`renders ./components/divider/demo/vertical.md correctly 1`] = `
<div>
  Text
  <div
    class="infini-divider infini-divider-vertical"
  />
  <a
    href="#"
  >
    Link
  </a>
  <div
    class="infini-divider infini-divider-vertical"
  />
  <a
    href="#"
  >
    Link
  </a>
</div>
`;
